--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ table,h3,h1{
 
 #cartOverlay {
   position: fixed;
+
   top: 0px;
   left: 0px;
   width: 100vw;
@@ -62,6 +63,7 @@ table,h3,h1{
 
 #viewCart {
   background-color: white;
+  padding: 10px;
 }
 
 img {
