--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root {
-  --primary-bg-color: rgb(223, 202, 233);
+  --primary-bg-color: #dfcae9;
   --panel-bg-color: rgb(183, 157, 196);
-  --primary-accent-color: rgb(59, 53, 97); 
+  --primary-accent-color: #3b3561; 
+  --button-background: #b798c5; 
 }
 
 * {
@@ -21,6 +22,7 @@ header a{
   max-width: 1200px;
   margin: 0 auto;
   text-align: left;
+   padding: 5px;
   
 }
 table {
@@ -62,8 +64,12 @@ table,h3,h1{
 }
 
 #viewCart {
-  background-color: white;
-  padding: 10px;
+  border-color: var(--primary-accent-color);
+  border-style: solid;
+  border-radius: 10px;
+  background-color: var(--primary-bg-color);
+  padding: 10px 50px;
+  
 }
 
 img {
@@ -73,4 +79,26 @@ img {
   border-color: var(--primary-accent-color);
   border-radius: 5px ;
   border-width: 3px;
+}
+#button0, #button1,#calculateButton,#exitButton{
+ background-color:var(--button-background);
+ border-radius: 10px;
+ border-color: var(--primary-accent-color);
+ 
+}
+#cart {
+  background-color: var(--button-background);
+  margin: 3px;
+  padding: 3px 10px;
+  font-size: large;
+  font-weight: bold;
+  border-radius: 10px ;
+  border-color: #5a5481;
+  border-style: inset;
+}
+select{
+  background-color: var(--button-background);
+  border-width: 2px;
+  border-color: var(--primary-accent-color);
+  border-radius: 2px;
 }
